support issuing jwt authorization grant (jag) tokens (#3106)
* support issuing jwt authorization grant (jag) tokens

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

* address review comments

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

---------

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>